[gd_scene load_steps=3 format=3 uid="uid://cadniwt01li5i"]

[ext_resource type="FontFile" uid="uid://ctb02tsn68oo8" path="res://Fonts/Retro Gaming.ttf" id="1_2soiw"]
[ext_resource type="Script" path="res://Scenes/UI/end_screen.gd" id="1_eevp3"]

[node name="End Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eevp3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/PanelContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2soiw")
text = "Restart"

[node name="Label" type="Label" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "          "

[node name="Main Menu" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2soiw")
text = "Main Menu"

[node name="Label2" type="Label" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "          "

[node name="Quit" type="Button" parent="ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2soiw")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2soiw")
theme_override_font_sizes/font_size = 50
text = "

You Win"

[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
